tests/baselines/reference/ExportClassWithInaccessibleTypeInTypeParameterConstraint.errors.txt
ExportClassWithInaccessibleTypeInTypeParameterConstraint.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== ExportClassWithInaccessibleTypeInTypeParameterConstraint.ts (1 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
        class Point {
            x: number;
            y: number;
        }
    
        export var Origin: Point = { x: 0, y: 0 };
    
        export class Point3d extends Point {
            z: number;
        }
    
        export var Origin3d: Point3d = { x: 0, y: 0, z: 0 };
    
        export class Line<TPoint extends Point>{
            constructor(public start: TPoint, public end: TPoint) { }
    
            static fromorigin2d(p: Point): Line<Point>{
                return null;
            }
        }
    }
    